--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -38,81 +38,81 @@ spec:
       enabled: true
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
-      enabled: true
-      config:
-        global:
-          resolve_timeout: 5m
-        route:
-          group_by: ["alertname", "job"]
-          group_interval: 10m
-          group_wait: 1m
-          receiver: pushover
-          repeat_interval: 12h
-          routes:
-            - receiver: "null"
-              matchers:
-                - alertname =~ "InfoInhibitor"
-            - receiver: pushover
-              continue: true
-              matchers:
-                - severity = "critical"
-        inhibit_rules:
-          - equal: ["alertname", "namespace"]
-            source_matchers:
-              - severity = "critical"
-            target_matchers:
-              - severity = "warning"
-          - name: "null"
-          - name: pushover
-            pushover_configs:
-              - html: true
-                message: |-
-                  {{ "{{-" }} range .Alerts {{ "}}" }}
-                    {{ "{{-" }} if ne .Annotations.description "" {{ "}}" }}
-                      {{ "{{" }} .Annotations.description {{ "}}" }}
-                    {{ "{{-" }} else if ne .Annotations.summary "" {{ "}}" }}
-                      {{ "{{" }} .Annotations.summary {{ "}}" }}
-                    {{ "{{-" }} else if ne .Annotations.message "" {{ "}}" }}
-                      {{ "{{" }} .Annotations.message {{ "}}" }}
-                    {{ "{{-" }} else {{ "}}" }}
-                      Alert description not available
-                    {{ "{{-" }} end {{ "}}" }}
-                    {{ "{{-" }} if gt (len .Labels.SortedPairs) 0 {{ "}}" }}
-                      <small>
-                      {{ "{{-" }} range .Labels.SortedPairs {{ "}}" }}
-                        <b>{{ "{{" }} .Name {{ "}}" }}:</b> {{ "{{" }} .Value {{ "}}" }}
-                      {{ "{{-" }} end {{ "}}" }}
-                      </small>
-                    {{ "{{-" }} end {{ "}}" }}
-                  {{ "{{-" }} end {{ "}}" }}
-                priority: |-
-                  {{ "{{" }} if eq .Status "firing" {{ "}}" }}1{{ "{{" }} else {{ "}}" }}0{{ "{{" }} end {{ "}}" }}
-                send_resolved: true
-                sound: gamelan
-                title: >-
-                  {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
-                  [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
-                token: "${SECRET_PUSHOVER_TOKEN}"
-                url_title: View in Alertmanager
-                user_key: "${SECRET_PUSHOVER_USER_KEY}"
-      ingress:
-        enabled: true
-        pathType: Prefix
-        ingressClassName: internal
-        hosts:
-          - alertmanager.${SECRET_DOMAIN}
-        tls:
-          - hosts:
-              - alertmanager.${SECRET_DOMAIN}
-      alertmanagerSpec:
-        replicas: 2
-        storage:
-          volumeClaimTemplate:
-            spec:
-              storageClassName: local-path
-              resources:
-                requests:
-                  storage: 2Gi
+      enabled: false
+      # config:
+      #   global:
+      #     resolve_timeout: 5m
+      #   route:
+      #     group_by: ["alertname", "job"]
+      #     group_interval: 10m
+      #     group_wait: 1m
+      #     receiver: pushover
+      #     repeat_interval: 12h
+      #     routes:
+      #       - receiver: "null"
+      #         matchers:
+      #           - alertname =~ "InfoInhibitor"
+      #       - receiver: pushover
+      #         continue: true
+      #         matchers:
+      #           - severity = "critical"
+      #   inhibit_rules:
+      #     - equal: ["alertname", "namespace"]
+      #       source_matchers:
+      #         - severity = "critical"
+      #       target_matchers:
+      #         - severity = "warning"
+      #     - name: "null"
+      #     - name: pushover
+      #       pushover_configs:
+      #         - html: true
+      #           message: |-
+      #             {{ "{{-" }} range .Alerts {{ "}}" }}
+      #               {{ "{{-" }} if ne .Annotations.description "" {{ "}}" }}
+      #                 {{ "{{" }} .Annotations.description {{ "}}" }}
+      #               {{ "{{-" }} else if ne .Annotations.summary "" {{ "}}" }}
+      #                 {{ "{{" }} .Annotations.summary {{ "}}" }}
+      #               {{ "{{-" }} else if ne .Annotations.message "" {{ "}}" }}
+      #                 {{ "{{" }} .Annotations.message {{ "}}" }}
+      #               {{ "{{-" }} else {{ "}}" }}
+      #                 Alert description not available
+      #               {{ "{{-" }} end {{ "}}" }}
+      #               {{ "{{-" }} if gt (len .Labels.SortedPairs) 0 {{ "}}" }}
+      #                 <small>
+      #                 {{ "{{-" }} range .Labels.SortedPairs {{ "}}" }}
+      #                   <b>{{ "{{" }} .Name {{ "}}" }}:</b> {{ "{{" }} .Value {{ "}}" }}
+      #                 {{ "{{-" }} end {{ "}}" }}
+      #                 </small>
+      #               {{ "{{-" }} end {{ "}}" }}
+      #             {{ "{{-" }} end {{ "}}" }}
+      #           priority: |-
+      #             {{ "{{" }} if eq .Status "firing" {{ "}}" }}1{{ "{{" }} else {{ "}}" }}0{{ "{{" }} end {{ "}}" }}
+      #           send_resolved: true
+      #           sound: gamelan
+      #           title: >-
+      #             {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
+      #             [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
+      #           token: "${SECRET_PUSHOVER_TOKEN}"
+      #           url_title: View in Alertmanager
+      #           user_key: "${SECRET_PUSHOVER_USER_KEY}"
+      # ingress:
+      #   enabled: true
+      #   pathType: Prefix
+      #   ingressClassName: internal
+      #   hosts:
+      #     - alertmanager.${SECRET_DOMAIN}
+      #   tls:
+      #     - hosts:
+      #         - alertmanager.${SECRET_DOMAIN}
+      # alertmanagerSpec:
+      #   replicas: 2
+      #   storage:
+      #     volumeClaimTemplate:
+      #       spec:
+      #         storageClassName: local-path
+      #         resources:
+      #           requests:
+      #             storage: 2Gi
 
     kubelet:
       enabled: true
