--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -5,6 +5,7 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:w4Jxkzfa1e98komYfGNldfHz/0e924HAlOTJlmg9WURdHAIoPrVtIg==,iv:qGuLmEAzV4pl7C8dLkJnjW0i5S9VCcarfg/1dgxutNE=,tag:gfEnAOpLLVj7ZZyuzPOFpA==,type:str]
+    SECRET_MAXMIND_ACCOUNT_ID: ENC[AES256_GCM,data:5R/P0SrF,iv:9FSrrDk9rwoe8jeo9iXu+WoldXmwQMHX+w0ZhL9lbhg=,tag:1DO9hHfLOXs3f0c/aawOkw==,type:int]
     SECRET_PLACEHOLDER: ENC[AES256_GCM,data:RoYlM5dSQ3nUSZUW,iv:ejafphAV7suxETRpCgQG1b0qIkG1kjt6w4GYRzwm84g=,tag:QqvtF8I3Joa14BMZN8QA1A==,type:str]
     SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:owbbK13fBL/A,iv:/Tn+AaCyCktPJKQ6yVN9aHxKrOhP5IRkKYepyu1qlbQ=,tag:1slNXClJaajYSajI9eshNQ==,type:str]
     SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:lMnW4FOQDzk=,iv:KgbnKvjbqGh9mQJyXK5AQrqY5457kj8uiwtl353jazo=,tag:PbUuxjQtfPPA+yjqLU4llg==,type:str]
@@ -31,8 +32,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-29T19:32:41Z"
-    mac: ENC[AES256_GCM,data:6yfFvkrJplse469+jKVfdkttvwZ1bb3Bq4s9sJW3OfcIvWk8MBEI+pgI9Pu7NefVrn0xRWBO3J+DrdX7XKPOvKS9V+iCpP/hxkFlAQES6pwAXiP2U7t41AqXA/vrr/nMkMr7oD/33IzXna7co5I8g4Rbx16Y7Asd7mqNcR60v/k=,iv:LfsAfDYoBdN35kTP2WFNZC6CkF27hA7qQNlsTyIQKD0=,tag:KlKjgNa4USbYiogFw/Dm3g==,type:str]
+    lastmodified: "2023-11-19T19:49:31Z"
+    mac: ENC[AES256_GCM,data:QWJtb82mM0J/F/NIHyDeVHTjvl3VH9cBak5T2LKdS2jhhdOIKpxzxDj6CtNLUcJfv7+Ug4CtK2DiIMmNEIILnrFeR4lHg/SWwQGeK9KN/KtVUECAPugeQFPFNATxvXiVJFC+cHAAE/+HfJzzUilsxEEJQOua4T06n5b6valdinI=,iv:cQp1NE1vJZ7Dt5oVsGBDNR2u0r2JMcvGUGBNN/O1Mog=,tag:AX1wmq1vPC/MKUers2hiDQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
